--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,28 @@ h1 {
 .tweet-container { 
 	border-style: solid;
 	border-width: 1px;
+	border-color: rgb(205,205,205);
 	
 	margin: 0 auto;
-	padding: 30px 20px;
+	padding: 20px 20px;
+}
+
+row.tweet-list {
+	border-style: solid;
+	border-width: 1px;
+	border-color: rgb(205,205,205);
+	padding: 0 0;
+	margin: 120px 120px;
+}
+
+span.user {
+	font-style: bold;
+}
+
+span.message-time {
+	color: rgb(205,205,205);
+}
+
+div.message {
+
 }
