--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,19 @@ h1 {
 }
 .tweet-container { 
 	border-style: solid;
-	border-width: 1px;
+	border-width: 0 0 1px 0;
 	border-color: rgb(205,205,205);
 	
 	margin: 0 auto;
 	padding: 20px 20px;
 }
 
-row.tweet-list {
+.row .tweet-list {
 	border-style: solid;
 	border-width: 1px;
 	border-color: rgb(205,205,205);
 	padding: 0 0;
-	margin: 120px 120px;
+	/*margin: 120px 120px;*/
 }
 
 span.user {
@@ -28,4 +28,8 @@ span.message-time {
 
 div.message {
 
+}
+
+div.show-more {
+	text-align: center;
 }
