--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,16 @@ div.show-more {
 	border-style: solid;
 	border-width: 1px 1px 0 1px;
 	border-color: rgb(205,205,205);
+	background-color: rgb(243,246,248);
 	display: none;
 	padding: 7px 7px;
 }
 
-button.show-more {
+
+a.show-more {
 	margin: 0 auto;
 	display: block;
+	text-align: center;
 }
 
 #user-modal .modal-header {
